Unified Arrow architecture: single data route for all backends
Replace two-route design (Arrow PyCapsule for polars, dict-of-lists
for pandas) with a single unified Arrow path:
narwhals → Arrow PyCapsule → Rust → Arrow (weight column appended) → narwhals

Rust side:
- Replace 5 functions (rim_iterate, rim_iterate_dict, rim_iterate_grouped,
  assemble_weights, assemble_grouped_weights) with 3 unified Arrow
  functions (rim_rake, rim_rake_grouped, rim_rake_by_scheme)
- Null detection via Arrow null bitmaps, weight assembly, and column
  appending all happen in Rust with zero Python objects in the data path
- RakeResult is now diagnostics-only (no weights field)

Python side:
- Drastically simplified _rake.py (1103 → 547 lines)
- Removed _engine_py.py (pure Python fallback)
- Removed _run_engine(), _add_weight_column(), all .to_list() in hot path
- Each API function: validate → single Rust call → nw.from_arrow → return

Performance: 6x faster for small datasets, 2.5x faster for grouped raking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.28", features = ["extension-module"] }
-numpy = "0.28"               # Zero-copy NumPy array access
+arrow = { version = "57", default-features = false, features = ["ffi"] }  # Arrow PyCapsule FFI
 rayon = "1.10"               # Parallel iteration for grouped raking
 indexmap = "2"               # Preserves insertion order like Python dict
-# arrow = { version = "54", optional = true }  # Future: zero-copy from Polars
-
-[features]
-default = []
-# arrow = ["dep:arrow"]  # Enable when ready for Arrow FFI path
 
 [profile.release]
 lto = "fat"                  # Fat LTO for cross-crate inlining
