--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,10 +10,38 @@ permissions:
 
 jobs:
   # ---------------------------------------------------------------
+  # Run tests before building
+  # ---------------------------------------------------------------
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install dependencies
+        run: |
+          pip install maturin
+          pip install pytest polars pandas pyarrow narwhals
+
+      - name: Build and install
+        run: maturin develop --release
+
+      - name: Run tests
+        run: pytest tests/ -v
+
+  # ---------------------------------------------------------------
   # Build wheels for each OS × Python version
   # ---------------------------------------------------------------
   build:
     name: Build / ${{ matrix.os }} / ${{ matrix.python }}
+    needs: [test]
     strategy:
       fail-fast: false
       matrix:
